<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.quarkiverse</groupId>
        <artifactId>quarkiverse-parent</artifactId>
        <version>20</version>
    </parent>

    <groupId>io.quarkiverse.githubapp</groupId>
    <artifactId>quarkus-github-app-parent</artifactId>
    <version>999-SNAPSHOT</version>
    <name>Quarkus - GitHub App - Parent</name>

    <packaging>pom</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <maven.compiler.release>17</maven.compiler.release>
        <maven.compiler.parameters>true</maven.compiler.parameters>
        <quarkus.version>3.20.0</quarkus.version>
        <compiler-plugin.version>3.13.0</compiler-plugin.version>
        <resource-plugin.version>3.3.1</resource-plugin.version>
        <dependency-plugin.version>3.8.1</dependency-plugin.version>
        <surefire-plugin.version>3.5.3</surefire-plugin.version>
        <jandex-plugin.version>3.2.7</jandex-plugin.version>
        <assertj.version>3.27.4</assertj.version>

        <quarkus-github-api.version>1.326.0</quarkus-github-api.version>
        <airline.version>3.1.0</airline.version>

        <webjar.fomantic-ui.version>2.9.0</webjar.fomantic-ui.version>
        <webjar.vue.version>2.6.12</webjar.vue.version>
        <webjar.jquery.version>3.7.1</webjar.jquery.version>
    </properties>

    <modules>
        <module>events</module>
        <module>ui</module>
        <module>deployment</module>
        <module>runtime</module>
        <module>command-airline</module>
        <module>testing</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.quarkus</groupId>
                <artifactId>quarkus-bom</artifactId>
                <version>${quarkus.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>io.quarkiverse.githubapi</groupId>
                <artifactId>quarkus-github-api</artifactId>
                <version>${quarkus-github-api.version}</version>
            </dependency>
            <dependency>
                <groupId>io.quarkiverse.githubapi</groupId>
                <artifactId>quarkus-github-api-deployment</artifactId>
                <version>${quarkus-github-api.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.rvesse</groupId>
                <artifactId>airline</artifactId>
                <version>${airline.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>com.github.rvesse</groupId>
                        <artifactId>airline-backcompat-javaxinject</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>jakarta.inject</groupId>
                        <artifactId>jakarta.inject-api</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>${assertj.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>io.quarkus</groupId>
                    <artifactId>quarkus-maven-plugin</artifactId>
                    <version>${quarkus.version}</version>
                </plugin>
                <plugin>
                    <groupId>io.quarkus</groupId>
                    <artifactId>quarkus-config-doc-maven-plugin</artifactId>
                    <version>${quarkus.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${compiler-plugin.version}</version>
                </plugin>
                <plugin>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>${resource-plugin.version}</version>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${surefire-plugin.version}</version>
                    <configuration>
                        <systemPropertyVariables>
                            <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                        </systemPropertyVariables>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>${dependency-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>io.smallrye</groupId>
                    <artifactId>jandex-maven-plugin</artifactId>
                    <version>${jandex-plugin.version}</version>
                    <executions>
                        <execution>
                            <id>make-index</id>
                            <goals>
                                <goal>jandex</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>gsmet</id>
            <name>Guillaume Smet</name>
            <email>guillaume.smet@gmail.com</email>
            <organization>Red Hat</organization>
            <organizationUrl>http://www.redhat.com/</organizationUrl>
        </developer>
    </developers>

    <scm>
        <url>https://github.com/quarkiverse/quarkus-github-app</url>
        <connection>scm:git:git@github.com:quarkiverse/quarkus-github-app.git</connection>
        <developerConnection>scm:git:git@github.com:quarkiverse/quarkus-github-app.git</developerConnection>
      <tag>HEAD</tag>
  </scm>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/quarkiverse/quarkus-github-app/issues/</url>
    </issueManagement>
    <profiles>
        <profile>
            <id>docs</id>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>!true</value>
                </property>
            </activation>
            <modules>
                <module>docs</module>
            </modules>
        </profile>
        <profile>
            <id>it</id>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>!true</value>
                </property>
            </activation>
            <modules>
                <module>integration-tests</module>
            </modules>
        </profile>
    </profiles>
</project>
